--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,17 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #server.port=8082
 #
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt
+spring.datasource.username=den123
+#spring.datasource.username=elteio24m7vrfele
+spring.datasource.password=123456
 ##App Properties
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://td5l74lo6615qq42.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xdnmmzylvx8rqpqv?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-spring.datasource.username = rhwp09pdd5ws7zl3
-spring.datasource.password = lopmvhkp0ezjtj6j
+#spring.datasource.url = jdbc:mysql://td5l74lo6615qq42.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xdnmmzylvx8rqpqv?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+#spring.datasource.username = rhwp09pdd5ws7zl3
+#spring.datasource.password = lopmvhkp0ezjtj6j
 
 
 ## Hibernate Properties
@@ -31,5 +36,19 @@ spring.jpa.hibernate.ddl-auto = update
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
 server.port=8082
+
+spring.datasource.hikari.connection-timeout = 20000 
+  #maximum number of milliseconds that a client will wait for a connection
+spring.datasource.hikari.minimum-idle= 10
+  #minimum number of idle connections maintained by HikariCP in a connection pool
+spring.datasource.hikari.maximum-pool-size= 10
+   #maximum pool size
+spring.datasource.hikari.idle-timeout=10000
+   #maximum idle time for connection
+spring.datasource.hikari.max-lifetime= 1000 
+#   maximum lifetime in milliseconds of a connection in the pool after it is closed.
+spring.datasource.hikari.auto-commit =true
+   #default auto-commit behavior.
+
 
 
