--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #server.port=8082
 #
-
 spring.datasource.url=jdbc:mysql://localhost:3306/jwt
 spring.datasource.username=den123
 #spring.datasource.username=elteio24m7vrfele
@@ -24,31 +23,40 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://td5l74lo6615qq42.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xdnmmzylvx8rqpqv?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 #spring.datasource.username = rhwp09pdd5ws7zl3
 #spring.datasource.password = lopmvhkp0ezjtj6j
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
 
-
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+file.upload-dir=uploadfile
 ## Hibernate Properties
-
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
 server.port=8082
-
-spring.datasource.hikari.connection-timeout = 20000 
-  #maximum number of milliseconds that a client will wait for a connection
-spring.datasource.hikari.minimum-idle= 10
-  #minimum number of idle connections maintained by HikariCP in a connection pool
-spring.datasource.hikari.maximum-pool-size= 10
-   #maximum pool size
+spring.datasource.hikari.connection-timeout=20000 
+#maximum number of milliseconds that a client will wait for a connection
+spring.datasource.hikari.minimum-idle=10
+#minimum number of idle connections maintained by HikariCP in a connection pool
+spring.datasource.hikari.maximum-pool-size=10
+#maximum pool size
 spring.datasource.hikari.idle-timeout=10000
-   #maximum idle time for connection
-spring.datasource.hikari.max-lifetime= 1000 
+#maximum idle time for connection
+spring.datasource.hikari.max-lifetime=1000 
 #   maximum lifetime in milliseconds of a connection in the pool after it is closed.
-spring.datasource.hikari.auto-commit =true
-   #default auto-commit behavior.
+spring.datasource.hikari.auto-commit=true
+#default auto-commit behavior.
+
 
 
 
